# cdc2net

./: .gitignore  README.md
firmware/: CMakeLists.txt  partitions_ota.csv  platformio.ini  sdkconfig.defaults
firmware/components/improv_wifi_busware/: CMakeLists.txt  library.json  library.properties
firmware/components/improv_wifi_busware/include/: ImprovTypes.h  ImprovWiFiLibrary.h
firmware/components/improv_wifi_busware/include/improv_wifi/: arduino_backend.h  idf_backend.h  improv_wifi.h  serial_filter.h  types.h  wifi_backend.h
firmware/components/improv_wifi_busware/src/: arduino_facade.cpp  backend_arduino.cpp  backend_idf.cpp  improv_wifi.cpp  serial_filter.cpp
firmware/components/usb_host_ch34x_vcp/: CMakeLists.txt
firmware/components/usb_host_cp210x_vcp/: CMakeLists.txt
firmware/components/usb_host_ftdi_vcp/: CMakeLists.txt
firmware/scripts/: deploy.sh  gen_web_assets.py  release.sh  version_bump.py
firmware/src/: CMakeLists.txt  bridge.c  bridge.h  config.c  config.h  health.c  health.h  improv_glue.cpp  improv_glue.h  log_buffer.c  log_buffer.h  main.c  mdns_glue.c  mdns_glue.h  net.c  net.h  ota_check.c  ota_check.h  serialcfg.c  serialcfg.h  sink_tcp.c  sink_tcp.h  source.h  source_usb.c  source_usb.h  version.h  web_assets.h  webui.c  webui.h
firmware/web/: busware_logo.b64  index.html
webflasher/: index.html
